# name: test_group_from_path[ctx-bar]
  <class 'list'> [
    "MagicTodo(desc='High-priority item | @high ctime:HHMM dtime:HHMM', contexts=('high',), create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'}, priority='A')",
  ]
---
# name: test_group_from_path[ctx-foo]
  <class 'list'> [
    "MagicTodo(desc='High-priority item | @high ctime:HHMM dtime:HHMM', contexts=('high',), create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'}, priority='A')",
    "MagicTodo(desc='High-priority item. | @high ctime:HHMM dtime:HHMM', contexts=('high',), create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'}, priority='A')",
  ]
---
# name: test_group_from_path[filter-kwarg-desc-bar]
  <class 'list'> [
  ]
---
# name: test_group_from_path[filter-kwarg-desc-foo]
  <class 'list'> [
    "MagicTodo(desc='Double colons should be::ignored. | ctime:HHMM dtime:HHMM', create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'})",
  ]
---
# name: test_group_from_path[no-filter-kwargs-bar]
  <class 'list'> [
    "MagicTodo(desc='This todo came from the C.txt file. | +C.txt ctime:HHMM dtime:HHMM', create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'}, projects=('C.txt',))",
    "MagicTodo(desc='Some other done todo. | @done ctime:HHMM dtime:HHMM', contexts=('done',), create_date=1900-01-01, done_date=2022-02-07, done=True, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'})",
    "MagicTodo(desc='And another... | +another ctime:HHMM dtime:HHMM', create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'}, priority='B', projects=('another',))",
    "MagicTodo(desc='Then a few lines of nonesense...... | ctime:HHMM dtime:HHMM', create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'})",
    "MagicTodo(desc='Then a few lines of nonesense...... | ctime:HHMM dtime:HHMM', create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'})",
    "MagicTodo(desc='Then a few lines of nonesense...... | ctime:HHMM dtime:HHMM', create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'})",
    "MagicTodo(desc='Then a few lines of nonesense...... | ctime:HHMM dtime:HHMM', create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'})",
    "MagicTodo(desc='Then a few lines of nonesense...... | ctime:HHMM dtime:HHMM', create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'})",
    "MagicTodo(desc='Then a few lines of nonesense...... | ctime:HHMM dtime:HHMM', create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'})",
    "MagicTodo(desc='Then a few lines of nonesense...... | ctime:HHMM dtime:HHMM', create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'})",
    "MagicTodo(desc='Then a few lines of nonesense...... | ctime:HHMM dtime:HHMM', create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'})",
    "MagicTodo(desc='Then a few lines of nonesense...... | ctime:HHMM dtime:HHMM', create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'})",
    "MagicTodo(desc='Then a few lines of nonesense...... | ctime:HHMM dtime:HHMM', create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'})",
    "MagicTodo(desc='And +finally... one:more!', create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'}, priority='C', projects=('finally',))",
    "MagicTodo(desc='I do lots of stuff in this file. Some lines are todo tasks, but some lines are headers. Some | ctime:HHMM dtime:HHMM', create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'})",
    "MagicTodo(desc='other lines are apart of text paragraphs. | ctime:HHMM dtime:HHMM', create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'})",
    "MagicTodo(desc='First item. | ctime:HHMM dtime:HHMM', create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'}, priority='N')",
    "MagicTodo(desc='High-priority item | @high ctime:HHMM dtime:HHMM', contexts=('high',), create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'}, priority='A')",
    "MagicTodo(desc='Done item | ctime:HHMM dtime:HHMM', create_date=1900-01-01, done_date=2022-02-07, done=True, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'}, priority='B')",
    "MagicTodo(desc='Item is due:2022-01-31.', create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'}, priority='N')",
  ]
---
# name: test_group_from_path[no-filter-kwargs-foo]
  <class 'list'> [
    "MagicTodo(desc='I do lots of stuff in this file. Some lines are todo tasks, but some lines are headers. Some | ctime:HHMM dtime:HHMM', create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'})",
    "MagicTodo(desc='other lines are apart of text paragraphs. | ctime:HHMM dtime:HHMM', create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'})",
    "MagicTodo(desc='First item. | ctime:HHMM dtime:HHMM', create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'}, priority='N')",
    "MagicTodo(desc='High-priority item | @high ctime:HHMM dtime:HHMM', contexts=('high',), create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'}, priority='A')",
    "MagicTodo(desc='High-priority item. | @high ctime:HHMM dtime:HHMM', contexts=('high',), create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'}, priority='A')",
    "MagicTodo(desc='Done item | ctime:HHMM dtime:HHMM', create_date=1900-01-01, done_date=2022-02-07, done=True, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'}, priority='B')",
    "MagicTodo(desc='Item is due:2022-01-31.', create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'}, priority='N')",
    "MagicTodo(desc='This test item is awesome and has lots of | @stuff +test ctime:HHMM dtime:HHMM', contexts=('stuff',), create_date=1900-01-01, done_date=2022-02-07, done=True, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'}, priority='Z', projects=('test',))",
    'MagicTodo(desc=\'Not a valid "strict" todo | ctime:HHMM dtime:HHMM\', create_date=1900-01-01, done_date=2022-02-07, metadata={\'ctime\': \'HHMM\', \'dtime\': \'HHMM\'})',
    'MagicTodo(desc=\'Done item with no priority is a valid "strict" todo | ctime:HHMM dtime:HHMM\', create_date=1900-01-01, done_date=2022-02-07, done=True, metadata={\'ctime\': \'HHMM\', \'dtime\': \'HHMM\'})',
    'MagicTodo(desc=\'A lowercase "o" can also be used when running in "strict" mode. | ctime:HHMM dtime:HHMM\', create_date=1900-01-01, done_date=2022-02-07, metadata={\'ctime\': \'HHMM\', \'dtime\': \'HHMM\'})',
    'MagicTodo(desc=\'But this "o" can only be used if a priority is NOT provided. | ctime:HHMM dtime:HHMM\', create_date=1900-01-01, done_date=2022-02-07, metadata={\'ctime\': \'HHMM\', \'dtime\': \'HHMM\'}, priority=\'N\')',
    'MagicTodo(desc="Don\'t + make + normal + pluses + projects. | ctime:HHMM dtime:HHMM", create_date=1900-01-01, done_date=2022-02-07, metadata={\'ctime\': \'HHMM\', \'dtime\': \'HHMM\'}, priority=\'N\')',
    "MagicTodo(desc='Ditto for keys: with no values. | ctime:HHMM dtime:HHMM', create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'}, priority='N')",
    "MagicTodo(desc='We strip +punctuation. But not if the value:. is just @punctuation, ya:dig?', contexts=('punctuation',), create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'}, priority='N', projects=('punctuation',))",
    "MagicTodo(desc='We allow descriptions to start with projects. | +project ctime:HHMM dtime:HHMM', create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'}, priority='N', projects=('project',))",
    "MagicTodo(desc='We allow descriptions to start with contexts. | @context ctime:HHMM dtime:HHMM', contexts=('context',), create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'}, priority='N')",
    "MagicTodo(desc='1234 Todos can start with numbers:5678.', create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'}, priority='N')",
    'MagicTodo(desc=\'Todos can easily log their "done times" with this trick. | ctime:HHMM dtime:HHMM\', create_date=1900-01-01, done_date=2022-02-07, done=True, metadata={\'ctime\': \'HHMM\', \'dtime\': \'HHMM\'})',
    "MagicTodo(desc='Double colons should be::ignored. | ctime:HHMM dtime:HHMM', create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'})",
    'MagicTodo(desc="Sometimes we want to use apostrophe with project\'s or contexts\'. | @contexts +project ctime:HHMM dtime:HHMM", contexts=(\'contexts\',), create_date=1900-01-01, done_date=2022-02-07, metadata={\'ctime\': \'HHMM\', \'dtime\': \'HHMM\'}, projects=(\'project\',))',
    "MagicTodo(desc='We also ignore double ++pluses and double @@at signs. | ctime:HHMM dtime:HHMM', create_date=1900-01-01, done_date=2022-02-07, metadata={'ctime': 'HHMM', 'dtime': 'HHMM'})",
  ]
---
